Done with init, add, commit, remove, log